--- a/app.css
+++ b/app.css
@@ -1,3 +1,8 @@
+html {
+    background-color: lightblue;
+    height: 100vh;
+}
+
 main {
     display: flex;
     justify-content: center;
@@ -65,4 +70,32 @@ button.operation {
 button:hover {
     cursor: pointer;
     background-color: cornflowerblue;
+}
+
+footer {
+    display: flex;
+    font-size: xx-large;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    background-color: rgb(181, 181, 181);
+    margin: 18px -8px;
+}
+
+footer a {
+    width: 80px;
+    /* padding: 10px; */
+    margin: 20px;
+}
+
+svg {
+    width: 50%;
+    margin: 2%;
+    translate: 0px 5px;
+}
+
+svg:hover {
+    width: 80%;
+    border: 2px solid white;
+    border-radius: 50%;
 }
